--- a/AlphaGu2/App.xaml
+++ b/AlphaGu2/App.xaml
@@ -1,6 +1,7 @@
-﻿<Application x:Class="AlphaGu2.App"
+﻿<prism:PrismApplication x:Class="AlphaGu2.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:prism="http://prismlibrary.com/">
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
@@ -55,4 +56,4 @@
             <Style TargetType="{x:Type ToggleButton}" BasedOn="{StaticResource MahApps.Metro.Styles.MetroToggleButton}"/>
         </ResourceDictionary>
     </Application.Resources>
-</Application>
+</prism:PrismApplication>
